--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -43,17 +43,17 @@
             <h2>Juegos de Cartas</h2>
             <ul>
                 <li class="imagenLista">
-                    <img src="../img/ETCO_display_EN-600x600.jpg" alt="YUGIOH Eternity Code portada">
+                    <img src="../img/ETCO_display_EN-600x600.jpg" alt="YUGIOH Eternity Code portada" class="imagenCartas">
                     <h3>Yugi-Oh Eternity Code</h3>
                     <h4>$1900</h4>
                 </li>
                 <li class="imagenLista">
-                    <img src="../img/sp_n1McLdPFBg.png" alt="Magic The Gathering portada">
+                    <img src="../img/sp_n1McLdPFBg.png" alt="Magic The Gathering portada" class="imagenCartas">
                     <h3>Magic The Gathering Adventures in Forgotten Lands</h3>
                     <h4>$2500</h4>
                 </li>
                 <li class="imagenLista">
-                    <img src="../img/PKM_SWSH09-Booster-Display_EN-600-600x600.jpg" alt="Pokemon Cards">
+                    <img src="../img/PKM_SWSH09-Booster-Display_EN-600-600x600.jpg" alt="Pokemon Cards" class="imagenCartas">
                     <h3>Pokemon Trading Card Game</h3>
                     <h4>$3500</h4>
                 </li>
