--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <h1>
-    <a href="./index.html" class="tituloXerox">
+    <a href="./index.html" class="tituloXerox" id="xerox">
         XEROX
     </a>
 </h1>
@@ -77,7 +77,5 @@
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 </body>
-
-
 
 </html>
