--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -10,7 +10,7 @@
 </head>
 
 <h1>
-    <a href="../index.html" class="tituloXerox">
+    <a href="../index.html" class="tituloXerox" id="xerox">
         XEROX
     </a>
 </h1>
