--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -10,7 +10,7 @@
 </head>
 
 <h1>
-    <a href="../index.html" class="tituloXerox">
+    <a href="../index.html" class="tituloXerox" id="xerox">
         XEROX
     </a>
 </h1>
@@ -72,8 +72,8 @@
     </main>
     
     <footer>matiaslofiego@gmail.com
-        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img src="../img/icons8-instagram.svg" alt=""></a>
-        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img src="../img/icons8-facebook.svg" alt=""></a>
+        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img src="./img/icons8-instagram.svg" alt=""></a>
+        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img src="./img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 </body>
