--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -62,18 +62,20 @@
                     <h3>THE AMAZING SPIDER-MAN #1</h3>
                     <h4>$5000</h4>
                 </li>
-                <li class="imagenLista">            
+                <li class="imagenLista">
                     <img src="../img/TMNT_001_29.webp" alt="IDW TMNT #1 portada">
                     <h3> IDW TMNT #1</h3>
                     <h4>$5000</h4>
                 </li>
             </ul>
-        </section>  
+        </section>
     </main>
-    
+
     <footer>matiaslofiego@gmail.com
-        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img src="../img/icons8-instagram.svg" alt=""></a>
-        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img src="../img/icons8-facebook.svg" alt=""></a>
+        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
+                src="../img/icons8-instagram.svg" alt=""></a>
+        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
+                src="../img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 </body>
