--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -43,7 +43,8 @@
             <h2>Juegos de Cartas</h2>
             <ul>
                 <li class="imagenLista">
-                    <img src="../img/ETCO_display_EN-600x600.jpg" alt="YUGIOH Eternity Code portada" class="imagenCartas">
+                    <img src="../img/ETCO_display_EN-600x600.jpg" alt="YUGIOH Eternity Code portada"
+                        class="imagenCartas">
                     <h3>Yugi-Oh Eternity Code</h3>
                     <h4>$1900</h4>
                 </li>
@@ -53,17 +54,20 @@
                     <h4>$2500</h4>
                 </li>
                 <li class="imagenLista">
-                    <img src="../img/PKM_SWSH09-Booster-Display_EN-600-600x600.jpg" alt="Pokemon Cards" class="imagenCartas">
+                    <img src="../img/PKM_SWSH09-Booster-Display_EN-600-600x600.jpg" alt="Pokemon Cards"
+                        class="imagenCartas">
                     <h3>Pokemon Trading Card Game</h3>
                     <h4>$3500</h4>
                 </li>
             </ul>
         </section>
     </main>
-    
+
     <footer>matiaslofiego@gmail.com
-        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img src="../img/icons8-instagram.svg" alt=""></a>
-        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img src="../img/icons8-facebook.svg" alt=""></a>
+        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
+                src="../img/icons8-instagram.svg" alt=""></a>
+        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
+                src="../img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 </body>
