--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -48,7 +48,8 @@
                     <h4>$15000</h4>
                 </li>
                 <li class="imagenLista">
-                    <img src="../img/horizon-2-forbidden-west-20201124144437_1.jpg" alt="Horizon Forbidden West portada">
+                    <img src="../img/horizon-2-forbidden-west-20201124144437_1.jpg"
+                        alt="Horizon Forbidden West portada">
                     <h3>Horizon Forbidden West</h3>
                     <h4>$15000</h4>
                 </li>
@@ -70,10 +71,12 @@
             </ul>
         </section>
     </main>
-    
+
     <footer>matiaslofiego@gmail.com
-        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img src="./img/icons8-instagram.svg" alt=""></a>
-        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img src="./img/icons8-facebook.svg" alt=""></a>
+        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
+                src="./img/icons8-instagram.svg" alt=""></a>
+        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
+                src="./img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 </body>
