--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </h1>
 
 <body>
-    <header> 
+    <header>
         <nav>
             <ul class="xeroxNav">
                 <li class="xeroxLista">
                     <a href="./paginas/comics.html">COMICS</a>
                 </li>
-                <li class="xeroxLista" >
+                <li class="xeroxLista">
                     <a href="./paginas/manga.html">MANGA</a>
                 </li>
                 <li class="xeroxLista">
@@ -42,8 +42,9 @@
         <section>
             <h2>Recomendados</h2>
             <ul>
-                <li class="imagenLista" >
-                    <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" alt="bleach remix #1 portada">
+                <li class="imagenLista">
+                    <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp"
+                        alt="bleach remix #1 portada">
                     <h3>Bleach Remix #1</h3>
                     <h4>$3600</h4>
                 </li>
@@ -70,10 +71,12 @@
             </ul>
         </section>
     </main>
-    
+
     <footer>matiaslofiego@gmail.com
-        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img src="./img/icons8-instagram.svg" alt=""></a>
-        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img src="./img/icons8-facebook.svg" alt=""></a>
+        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
+                src="./img/icons8-instagram.svg" alt=""></a>
+        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
+                src="./img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 </body>
