--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -43,16 +43,18 @@
             <h2>Manga</h2>
             <ul>
                 <li class="imagenLista">
-                    <img src="../img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" alt="Death Note #10 portada">
+                    <img src="../img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg"
+                        alt="Death Note #10 portada">
                     <h3>Death Note #10</h3>
                     <h4>$1000</h4>
                 </li>
                 <li class="imagenLista">
-                    <img src="../img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" alt="Bleach remix #1 portada">
+                    <img src="../img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp"
+                        alt="Bleach remix #1 portada">
                     <h3>Bleach Remix #1</h3>
                     <h4>$3600</h4>
                 </li>
-                <li class="imagenLista">              
+                <li class="imagenLista">
                     <img src="../img/Volumen_1.webp" alt="One Piece #1 portada">
                     <h3>One Piece #1</h3>
                     <h4>$1000</h4>
@@ -70,10 +72,12 @@
             </ul>
         </section>
     </main>
-    
+
     <footer>matiaslofiego@gmail.com
-        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img src="../img/icons8-instagram.svg" alt=""></a>
-        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img src="../img/icons8-facebook.svg" alt=""></a>
+        <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
+                src="../img/icons8-instagram.svg" alt=""></a>
+        <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
+                src="../img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 </body>
