--- a/paginas/pruebagrid.html
+++ b/paginas/pruebagrid.html
@@ -7,33 +7,9 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
-<body class="gridPrincipal">
-    <header>
-        <nav>
-            <ul>
-                <li class="xeroxLista">
-                    <a href="../index.html">INICIO</a>
-                </li>
-                <li class="xeroxLista">
-                    <a href="./comics.html">COMICS</a>
-                </li>
-                <li class="xeroxLista">
-                    <a href="./manga.html">MANGA</a>
-                </li>
-                <li class="xeroxLista">
-                    <a href="./videojuegos.html">VIDEOJUEGOS</a>
-                </li>
-                <li class="xeroxLista">
-                    <a href="./juegosdecartas.html">JUEGOS DE CARTAS</a>
-                </li>
-                <li class="xeroxLista">
-                    <a href="./contactos.html">CONTACTOS</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
+<body>
+    <main class="gridPrincipal">
         <section>
             <h2>Videojuegos</h2>
             <ul>
