--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -74,9 +74,9 @@
 
     <footer>matiaslofiego@gmail.com
         <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
-                src="./img/icons8-instagram.svg" alt=""></a>
+                src="../img/icons8-instagram.svg" alt=""></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
-                src="./img/icons8-facebook.svg" alt=""></a>
+                src="../img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 </body>
