--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
@@ -39,7 +40,7 @@
     </header>
 
     <main>
-        <div>
+        <div class="contactoDiv">
             <ul class="contactoNav">
                 <li class="contactoComentario">
                     <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank">
@@ -61,29 +62,32 @@
 
             <form>
                 <fieldset class="contactoInfo">
-                    <div>
-                        <label for="Nombre" class="nombre">NOMBRE</label>
-                        <input type="text" name="nombre" id="nombre" required>
+                    <div class="form-floating">
+                        <input type="text" name="nombre" class="form-control" placeholder="Nombre" required>
+                        <label for="floatingTextarea">NOMBRE</label>
                     </div>
 
-                    <div>
-                        <label for="edad" class="fecha">FECHA DE NACIMIENTO</label>
-                        <input type="date" name="fecha" id="fecha">
+                    <div>                        
+                        <label for="edad">FECHA DE NACIMIENTO</label>
+                        <input type="date" name="fecha" id="fecha" required>
+
+
                     </div>
 
-                    <div>
-                        <label for="EMAIL" class="email">EMAIL</label>
-                        <input type="email" name="email" id="email" required>
+                    <div class="form-floating mb-3">
+                        <input type="email" name="email" class="form-control" id="floatingInput"
+                            placeholder="name@example.com" required>
+                        <label for="floatingInput">EMAIL</label>
                     </div>
 
-                    <div>
-                        <label for="telefono" class="telefono">TELÉFONO</label>
-                        <input type="tel" name="telefono" id="telefono" required>
+                    <div class="form-floating">
+                        <input type="text" name="teléfono" class="form-control" placeholder="Teléfono" required>
+                        <label for="floatingTextarea">TELÉFONO</label>
                     </div>
 
-                    <div>
-                        <label for="PAÍS" class="pais">PAÍS</label>
-                        <select name="pais" id="pais" required>
+                    <div class="form-floating">
+                        <select name="pais" class="form-select" id="floatingSelect"
+                            aria-label="Floating label select example" required>
                             <option value="Arg">Argentina</option>
                             <option value="Ch">Chile</option>
                             <option value="Br">Brasil</option>
@@ -94,11 +98,13 @@
                             <option value="Ecu">Ecuador</option>
                             <option value="Col">Colombia</option>
                         </select>
+                        <label for="floatingSelect">PAÍS</label>
                     </div>
 
-                    <div>
-                        <label for="comentario" class="comentario"> DEJANOS TU COMENTARIO (OPCIONAL)</label>
-                        <textarea name="comentario" class="comentario" cols="66" rows="10"></textarea>
+                    <div class="form-floating">
+                        <textarea name="comentario" class="form-control" placeholder="Dejanos tu comentario"
+                            id="floatingTextarea2" style="height: 200px"></textarea>
+                        <label for="floatingTextarea"> DEJANOS TU COMENTARIO (OPCIONAL)</label>
                     </div>
 
                     <div class="enviar">
@@ -116,6 +122,10 @@
                 src="../img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
