edición de html de contactos

--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -11,7 +11,7 @@
 </head>
 
 <h1>
-    <a href="../index.html" class="tituloXerox" id="xerox">
+    <a href="../index.html" class="container-fluid" id="xerox">
         XEROX
     </a>
 </h1>
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="contactoMain">
         <div class="contactoDiv">
             <ul class="contactoNav">
                 <li class="contactoComentario">
