--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -17,8 +17,8 @@
 </h1>
 
 <body>
-    <header>
-        <nav>
+    <header class="container-fluid">
+        <nav >
             <ul class="xeroxNav">
                 <li class="xeroxLista">
                     <a href="./comics.html">COMICS</a>
