--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -11,7 +11,7 @@
 </head>
 
 <h1>
-    <a href="../index.html" class="container-fluid" id="xerox">
+    <a href="../index.html" class="tituloXerox">
         XEROX
     </a>
 </h1>
