aplicación de breakpoints en todas las páginas

--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -18,21 +18,21 @@
 
 <body>
     <header class="container-fluid">
-        <nav >
+        <nav class="row">
             <ul class="xeroxNav">
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./comics.html">COMICS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./manga.html">MANGA</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./videojuegos.html">VIDEOJUEGOS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./juegosdecartas.html">JUEGOS DE CARTAS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./contactos.html">CONTACTOS</a>
                 </li>
             </ul>
@@ -40,7 +40,7 @@
     </header>
 
     <main class="contactoMain">
-        <div class="contactoDiv">
+        <div>
             <ul class="contactoNav">
                 <li class="contactoComentario">
                     <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank">
