--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -16,28 +16,28 @@
 </h1>
 
 <body>
-    <header>
-        <nav>
+    <header class="container-fluid">
+        <nav class="row">
             <ul class="xeroxNav">
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./comics.html">COMICS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./manga.html">MANGA</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./videojuegos.html">VIDEOJUEGOS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./juegosdecartas.html">JUEGOS DE CARTAS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
                     <a href="./contactos.html">CONTACTOS</a>
                 </li>
             </ul>
         </nav>
     </header>
-
+    
     <main>
         <section>
             <h2>Manga</h2>
