--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -67,7 +67,7 @@
                         <label for="floatingTextarea">NOMBRE</label>
                     </div>
 
-                    <div>                        
+                    <div>
                         <label for="edad">FECHA DE NACIMIENTO</label>
                         <input type="date" name="fecha" id="fecha" required>
 
@@ -124,8 +124,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
