--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -42,28 +42,28 @@
     <main>
         <section>
             <h2>Comics</h2>
-            <ul>
-                <li class="imagenLista">
-                    <img src="../img/batman_broma_asesina_deluxe_pvc.jpg" alt="Batman broma asesina portada 1">
+            <ul class="row" class="container-fluid">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
+                    <img src="../img/batman_broma_asesina_deluxe_pvc.jpg"  alt="Batman broma asesina portada 1">
                     <h3>BATMAN THE KILLING JOKE</h3>
                     <h4>$5000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="../img/Avengers_Vol_1_1.webp" alt="Avengers #1 portada">
                     <h3>THE AVENGERS #1</h3>
                     <h4>$5000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="../img/91U157yeMWL.jpg" alt="justice league #1 portada">
                     <h3>THE NEW 52 JUSTICE LEAGUE #1</h3>
                     <h4>$5000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="../img/clean.jpg" alt="The Amazing Spider-Man #1 portada">
                     <h3>THE AMAZING SPIDER-MAN #1</h3>
                     <h4>$5000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="../img/TMNT_001_29.webp" alt="IDW TMNT #1 portada">
                     <h3> IDW TMNT #1</h3>
                     <h4>$5000</h4>
