--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -43,29 +43,29 @@
         <section>
             <h2>Manga</h2>
             <ul>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
                     <img src="../img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg"
                         alt="Death Note #10 portada">
                     <h3>Death Note #10</h3>
                     <h4>$1000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
                     <img src="../img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp"
                         alt="Bleach remix #1 portada">
                     <h3>Bleach Remix #1</h3>
                     <h4>$3600</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
                     <img src="../img/Volumen_1.webp" alt="One Piece #1 portada">
                     <h3>One Piece #1</h3>
                     <h4>$1000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
                     <img src="../img/Volumen_1 (1).webp" alt="Vinland Saga #1 portada">
                     <h3>Vinland Saga #1</h3>
                     <h4>$1800</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
                     <img src="../img/Volumen_1 (2).webp" alt="Chainsaw Man #1 portada">
                     <h3>Chainsaw Man #1</h3>
                     <h4>$1000</h4>
