--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -16,22 +17,22 @@
 </h1>
 
 <body>
-    <header>
-        <nav>
+    <header class="container-fluid">
+        <nav class="row">
             <ul class="xeroxNav">
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
                     <a href="./paginas/comics.html">COMICS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
                     <a href="./paginas/manga.html">MANGA</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
                     <a href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
                     <a href="./paginas/juegosdecartas.html">JUEGOS DE CARTAS</a>
                 </li>
-                <li class="xeroxLista">
+                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
                     <a href="./paginas/contactos.html">CONTACTOS</a>
                 </li>
             </ul>
@@ -41,29 +42,29 @@
     <main>
         <section>
             <h2>Recomendados</h2>
-            <ul>
-                <li class="imagenLista">
+            <ul class="row">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp"
                         alt="bleach remix #1 portada">
                     <h3>Bleach Remix #1</h3>
                     <h4>$3600</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="./img/batman_broma_asesina_deluxe_pvc.jpg" alt="Batman broma asesina portada 1">
                     <h3>Batman The Killing Joke</h3>
                     <h4>$5000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="./img/god-of-war-ragnarok-20221131016774_1.jpg" alt="God of War Ragnarok portada">
                     <h3>God of war ragnarok</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="./img/D_NQ_NP_981861-MLA51427398809_092022-O.jpg" alt="The Last of Us Part 1 portada">
                     <h3>the last of us ps4</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenLista">
+                <li class="imagenListacol-lg-2 col-md-3 col-sm-9 ">
                     <img src="./img/Volumen_1 (2).webp" alt="Chainsaw Man #1 portada">
                     <h3>chainsaw man #1</h3>
                     <h4>$1000</h4>
@@ -79,6 +80,10 @@
                 src="./img/icons8-facebook.svg" alt=""></a>
         <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
 
 </body>
 
