--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -44,11 +44,11 @@
             <ul class="contactoNav">
                 <li class="contactoComentario">
                     <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank">
-                        <img src="../img/icons8-facebook.svg" alt="">Siguenos en Instagram</a>
+                        <img src="../img/icons8-facebook.svg" alt="">Siguenos en Facebook</a>
                 </li>
                 <li class="contactoComentario">
                     <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank">
-                        <img src="../img/icons8-instagram.svg" alt="">Siguenos en Facebook</a>
+                        <img src="../img/icons8-instagram.svg" alt="">Siguenos en Instagram</a>
                 </li>
                 <li class="contactoComentario">
                     <a href="">
