uso de overflow

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </a>
 </h1>
 
-<body>
+<body class="overflow-y-auto">
     <header class="container-fluid">
         <nav class="row">
             <ul class="xeroxNav">
