--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
     </a>
 </h1>
 
-<body class="overflow-y-auto">
+<body>
     <header class="container-fluid">
         <nav class="row">
             <ul class="xeroxNav">
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./paginas/comics.html">COMICS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./paginas/manga.html">MANGA</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
-                    <a href="./paginas/juegosdecartas.html">JUEGOS DE CARTAS</a>
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                    <a href="./paginas/juegosdecartas.html">CARTAS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-4">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./paginas/contactos.html">CONTACTOS</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main >
         <section>
             <h2>Recomendados</h2>
             <ul class="row">
@@ -64,7 +64,7 @@
                     <h3>the last of us ps4</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenListacol-lg-2 col-md-3 col-sm-9 ">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-9 ">
                     <img src="./img/Volumen_1 (2).webp" alt="Chainsaw Man #1 portada">
                     <h3>chainsaw man #1</h3>
                     <h4>$1000</h4>
