--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -20,19 +20,19 @@
     <header class="container-fluid">
         <nav class="row">
             <ul class="xeroxNav">
-                <li class="xeroxLista col-lg-2 col-md-2 col-sm-4">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./comics.html">COMICS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-2 col-sm-4">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./manga.html">MANGA</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-2 col-sm-4">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./videojuegos.html">VIDEOJUEGOS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-2 col-sm-4">
-                    <a href="./juegosdecartas.html">JUEGOS DE CARTAS</a>
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                    <a href="./juegosdecartas.html">CARTAS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-2 col-sm-4">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./contactos.html">CONTACTOS</a>
                 </li>
             </ul>
