--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -20,19 +20,19 @@
     <header class="container-fluid">
         <nav class="row">
             <ul class="xeroxNav">
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./comics.html">COMICS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./manga.html">MANGA</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./videojuegos.html">VIDEOJUEGOS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
-                    <a href="./juegosdecartas.html">JUEGOS DE CARTAS</a>
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                    <a href="./juegosdecartas.html">CARTAS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./contactos.html">CONTACTOS</a>
                 </li>
             </ul>
@@ -42,7 +42,7 @@
     <main>
         <section>
             <h2>Videojuegos</h2>
-            <ul>
+            <ul class="row">
                 <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
                     <img src="../img/the-last-of-us-parte-i-202261012304123_1.jpg" alt="The Last of Us Part 1 portada">
                     <h3>The Last of Us Part 1</h3>
