--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <main class="contactoMain">
+    <main class="contactoMain overflow-auto">
         <div>
             <ul class="contactoNav">
                 <li class="contactoComentario">
