--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <main >
+    <main class="overflow-auto">
         <section>
             <h2>Recomendados</h2>
             <ul class="row">
