uso de overflow en todas las paginas

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </nav>
     </header>
 
-    <main class="overflow-auto">
-        <section>
+    <main>
+        <section class="overflow-hidden">
             <h2>Recomendados</h2>
             <ul class="row">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
