--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="overflow-hidden">
         <section>
             <h2>Videojuegos</h2>
             <ul class="row">
