--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="overflow-hidden">
             <h2>Comics</h2>
             <ul class="row" class="container-fluid">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
