--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="overflow-hidden" >
         <section>
             <h2>Juegos de Cartas</h2>
             <ul class="row">
