--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -20,19 +20,19 @@
     <header class="container-fluid">
         <nav class="row">
             <ul class="xeroxNav">
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./comics.html">COMICS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./manga.html">MANGA</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./videojuegos.html">VIDEOJUEGOS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./juegosdecartas.html">CARTAS</a>
                 </li>
-                <li class="xeroxLista col-lg-2 col-md-4 col-sm-6">
+                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                     <a href="./contactos.html">CONTACTOS</a>
                 </li>
             </ul>
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="overflow-hidden">
             <h2>Manga</h2>
             <ul class="row">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
