--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -44,19 +44,19 @@
             <ul class="contactoNav">
                 <li class="contactoComentario">
                     <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank">
-                        <img src="../img/icons8-facebook.svg" alt="">Siguenos en Facebook</a>
+                        <img src="../img/icons8-facebook.svg" alt="icono Facebook">Siguenos en Facebook</a>
                 </li>
                 <li class="contactoComentario">
                     <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank">
-                        <img src="../img/icons8-instagram.svg" alt="">Siguenos en Instagram</a>
+                        <img src="../img/icons8-instagram.svg" alt="icono Instagram">Siguenos en Instagram</a>
                 </li>
                 <li class="contactoComentario">
                     <a href="">
-                        <img src="../img/icons8-incoming-call-30.png" alt="">(+54) 11-2668-2533</a>
+                        <img src="../img/icons8-incoming-call-30.png" alt="icono llamada">(+54) 11-2668-2533</a>
                 </li>
                 <li class="contactoComentario">
                     <a href="mailto:matiaslofieg@gmail.com" target="_blank">
-                        <img src="../img/icons8-mensaje-relleno-32.png" alt="">matiaslofiego@gmail.com</a>
+                        <img src="../img/icons8-mensaje-relleno-32.png" alt="icono mail">matiaslofiego@gmail.com</a>
                 </li>
             </ul>
 
