--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -43,28 +43,28 @@
         <section>
             <h2>Videojuegos</h2>
             <ul class="row">
-                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="../img/the-last-of-us-parte-i-202261012304123_1.jpg" alt="The Last of Us Part 1 portada">
-                    <h3>The Last of Us Part 1</h3>
+                    <h3>The Last of Us Part 1 ps4</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="../img/horizon-2-forbidden-west-20201124144437_1.jpg"
                         alt="Horizon Forbidden West portada">
                     <h3>Horizon Forbidden West</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenLista col-lg-2 col-md-6 col-sm-9 ">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="../img/D_NQ_NP_939213-MLA53178668757_012023-O.jpg" alt="FIFA 23 portada">
                     <h3>FIFA 23</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="../img/god-of-war-ragnarok-20221131016774_1.jpg" alt="God of War Ragnarok portada">
                     <h3>God of War Ragnarok</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenLista col-lg-2 col-md-6 col-sm-9">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="../img/1058-producto-1-1-5517.jpg" alt="Elden Ring portada">
                     <h3>Elden Ring</h3>
                     <h4>$15000</h4>
@@ -83,7 +83,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 </html>
