--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </li>
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="./img/D_NQ_NP_981861-MLA51427398809_092022-O.jpg" alt="The Last of Us Part 1 portada">
-                    <h3>the last of us ps4</h3>
+                    <h3>the last of us part 1 PS5</h3>
                     <h4>$15000</h4>
                 </li>
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9 ">
@@ -83,7 +83,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-    </script>
+        </script>
 
 </body>
 
