--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <a href="./index.html" class="tituloXerox" id="xerox">
         XEROX
     </a>
+
+    <form class="d-flex formH1" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
 </h1>
 
 <body>
