--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
     <a href="./index.html" class="tituloXerox" id="xerox">
         XEROX
     </a>
-
-    <form class="d-flex formH1" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
 </h1>
 
 <body>
@@ -41,6 +36,20 @@
                     <a href="./paginas/contactos.html">CONTACTOS</a>
                 </li>
             </ul>
+        </nav>
+
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+                <h5 class="text-white h4">Collapsed content</h5>
+                <span class="text-muted">Toggleable via the navbar brand.</span>
+            </div>
+        </div>
+        <nav class="navbar divInicio">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
         </nav>
     </header>
 
@@ -65,7 +74,7 @@
                     <h4>$15000</h4>
                 </li>
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
-                    <img src="./img/D_NQ_NP_981861-MLA51427398809_092022-O.jpg" alt="The Last of Us Part 1 portada">
+                    <img src="./img/the-last-of-us-parte-i-202261012304123_1.jpg" alt="The Last of Us Part 1 portada">
                     <h3>the last of us part 1 PS5</h3>
                     <h4>$15000</h4>
                 </li>
