--- a/index.html
+++ b/index.html
@@ -38,12 +38,6 @@
             </ul>
         </nav>
 
-        <div class="collapse" id="navbarToggleExternalContent">
-            <div class="bg-dark p-4">
-                <h5 class="text-white h4">Collapsed content</h5>
-                <span class="text-muted">Toggleable via the navbar brand.</span>
-            </div>
-        </div>
         <nav class="navbar divInicio">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,6 +45,30 @@
                 </button>
             </div>
         </nav>
+
+        <div class="collapse navbarLinks" id="navbarToggleExternalContent">
+            <div>
+                <nav>
+                    <ul class="xeroxNav1">
+                        <li class="xeroxLista1 ">
+                            <a class="text-white" href="./paginas/comics.html">COMICS</a>
+                        </li>
+                        <li class="xeroxLista1">
+                            <a class="text-white" href="./paginas/manga.html">MANGA</a>
+                        </li>
+                        <li class="xeroxLista1">
+                            <a class="text-white" href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
+                        </li>
+                        <li class="xeroxLista1">
+                            <a class="text-white" href="./paginas/juegosdecartas.html">CARTAS</a>
+                        </li>
+                        <li class="xeroxLista1">
+                            <a class="text-white" href="./paginas/contactos.html">CONTACTOS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
 
     <main>
