--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -40,7 +40,7 @@
     </header>
 
     <main class="contactoMain overflow-hidden">
-        <div>
+        <div class="contactoDiv">
             <ul class="contactoNav">
                 <li class="contactoComentario">
                     <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank">
@@ -62,28 +62,28 @@
 
             <form>
                 <fieldset class="contactoInfo">
-                    <div class="form-floating">
+                    <div class="form-floating contactoDiv">
                         <input type="text" name="nombre" class="form-control" placeholder="Nombre" required>
                         <label for="floatingTextarea">NOMBRE</label>
                     </div>
 
-                    <div>
+                    <div class="contactoDiv">
                         <label for="edad">FECHA DE NACIMIENTO</label>
                         <input type="date" name="fecha" id="fecha" required>
                     </div>
 
-                    <div class="form-floating mb-3">
+                    <div class="form-floating mb-3 contactoDiv">
                         <input type="email" name="email" class="form-control" id="floatingInput"
                             placeholder="name@example.com" required>
                         <label for="floatingInput">EMAIL</label>
                     </div>
 
-                    <div class="form-floating">
+                    <div class="form-floating contactoDiv">
                         <input type="text" name="teléfono" class="form-control" placeholder="Teléfono" required>
                         <label for="floatingTextarea">TELÉFONO</label>
                     </div>
 
-                    <div class="form-floating">
+                    <div class="form-floating contactoDiv">
                         <select name="pais" class="form-select" id="floatingSelect"
                             aria-label="Floating label select example" required>
                             <option value="Arg">Argentina</option>
@@ -99,13 +99,13 @@
                         <label for="floatingSelect">PAÍS</label>
                     </div>
 
-                    <div class="form-floating">
+                    <div class="form-floating contactoDiv">
                         <textarea name="comentario" class="form-control" placeholder="Dejanos tu comentario"
                             id="floatingTextarea2" style="height: 200px"></textarea>
                         <label for="floatingTextarea"> DEJANOS TU COMENTARIO (OPCIONAL)</label>
                     </div>
 
-                    <div class="enviar">
+                    <div class="enviar contactoDiv">
                         <input type="submit" value="ENVIAR">
                     </div>
                 </fieldset>
