adición de mnu toggler navbar en todas las paginas

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
         <nav class="navbar divInicio">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
@@ -71,8 +73,8 @@
         </div>
     </header>
 
-    <main>
-        <section class="overflow-hidden">
+    <main class="overflow-hidden">
+        <section>
             <h2>Recomendados</h2>
             <ul class="row">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
