--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -21,22 +21,56 @@
         <nav class="row">
             <ul class="xeroxNav">
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./comics.html">COMICS</a>
+                    <a href="../paginas/comics.html">COMICS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./manga.html">MANGA</a>
+                    <a href="../paginas/manga.html">MANGA</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./videojuegos.html">VIDEOJUEGOS</a>
+                    <a href="../paginas/videojuegos.html">VIDEOJUEGOS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./juegosdecartas.html">CARTAS</a>
+                    <a href="../paginas/juegosdecartas.html">CARTAS</a>
                 </li>
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./contactos.html">CONTACTOS</a>
+                    <a href="../paginas/contactos.html">CONTACTOS</a>
                 </li>
             </ul>
         </nav>
+
+        <nav class="navbar divInicio">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </nav>
+
+        <div class="collapse navbarLinks" id="navbarToggleExternalContent">
+            <div>
+                <nav>
+                    <ul class="xeroxNav1">
+                        <li class="xeroxLista1 ">
+                            <a class="text-white" href="../paginas/comics.html">COMICS</a>
+                        </li>
+                        <li class="xeroxLista1">
+                            <a class="text-white" href="../paginas/manga.html">MANGA</a>
+                        </li>
+                        <li class="xeroxLista1">
+                            <a class="text-white" href="../paginas/videojuegos.html">VIDEOJUEGOS</a>
+                        </li>
+                        <li class="xeroxLista1">
+                            <a class="text-white" href="../paginas/juegosdecartas.html">CARTAS</a>
+                        </li>
+                        <li class="xeroxLista1">
+                            <a class="text-white" href="../paginas/contactos.html">CONTACTOS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
 
     <main class="overflow-hidden">
