--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@
         <section>
             <h2>Recomendados</h2>
             <ul class="row">
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp"
                         alt="bleach remix #1 portada">
                     <h3>Bleach Remix #1</h3>
                     <h4>$3600</h4>
                 </li>
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="./img/batman_broma_asesina_deluxe_pvc.jpg" alt="Batman broma asesina portada 1">
                     <h3>Batman The Killing Joke</h3>
                     <h4>$5000</h4>
                 </li>
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
-                    <img src="./img/god-of-war-ragnarok-20221131016774_1.jpg" alt="God of War Ragnarok portada">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
+                    <img src="./img/Portada_God_of_War_Ragnarok.webp" alt="God of War Ragnarok portada">
                     <h3>God of war ragnarok</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="./img/the-last-of-us-parte-i-202261012304123_1.jpg" alt="The Last of Us Part 1 portada">
                     <h3>the last of us part 1 PS5</h3>
                     <h4>$15000</h4>
                 </li>
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-9 ">
+                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="./img/Volumen_1 (2).webp" alt="Chainsaw Man #1 portada">
                     <h3>chainsaw man #1</h3>
                     <h4>$1000</h4>
