--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -106,7 +106,7 @@
                         <input type="date" name="fecha" id="fecha" required>
                     </div>
 
-                    <div class="form-floating mb-3 contactoDiv">
+                    <div class="form-floating contactoDiv">
                         <input type="email" name="email" class="form-control" id="floatingInput"
                             placeholder="name@example.com" required>
                         <label for="floatingInput">EMAIL</label>
@@ -136,7 +136,7 @@
                     <div class="form-floating contactoDiv">
                         <textarea name="comentario" class="form-control" placeholder="Dejanos tu comentario"
                             id="floatingTextarea2" style="height: 200px"></textarea>
-                        <label for="floatingTextarea"> DEJANOS TU COMENTARIO (OPCIONAL)</label>
+                        <label for="floatingTextarea">DEJANOS TU COMENTARIO (OPCIONAL)</label>
                     </div>
 
                     <div class="enviar contactoDiv">
