--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -94,12 +94,12 @@
                     <h4>$15000</h4>
                 </li>
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
-                    <img src="../img/god-of-war-ragnarok-20221131016774_1.jpg" alt="God of War Ragnarok portada">
+                    <img src="../img/Portada_God_of_War_Ragnarok.webp" alt="God of War Ragnarok portada">
                     <h3>God of War Ragnarok</h3>
                     <h4>$15000</h4>
                 </li>
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
-                    <img src="../img/1058-producto-1-1-5517.jpg" alt="Elden Ring portada">
+                    <img src="../img/eldenring11-5c93145ed747e47dfe16451397874446-640-0.webp" alt="Elden Ring portada">
                     <h3>Elden Ring</h3>
                     <h4>$15000</h4>
                 </li>
