--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -75,6 +75,14 @@
 
     <main class="overflow-hidden">
         <section>
+
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Cartas</li>
+                </ol>
+            </nav>
+
             <h2>Juegos de Cartas</h2>
             <ul class="row">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-4 ">
