--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -73,8 +73,16 @@
         </div>
     </header>
 
-    <main>
-        <section class="overflow-hidden">
+    <main class="overflow-hidden">
+        <section>
+
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Manga</li>
+                </ol>
+            </nav>
+
             <h2>Manga</h2>
             <ul class="row">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
