--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -73,8 +73,16 @@
         </div>
     </header>
 
-    <main>
-        <section class="overflow-hidden">
+    <main class="overflow-hidden">
+        <section >
+
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Comics</li>
+                </ol>
+            </nav>
+
             <h2>Comics</h2>
             <ul class="row" class="container-fluid">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
