--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -137,11 +137,11 @@
                     <div class="form-floating contactoDiv">
                         <textarea name="comentario" class="form-control" placeholder="Dejanos tu comentario"
                             id="floatingTextarea2" style="height: 200px"></textarea>
-                        <label class="comentarioDisplay" for="floatingTextarea">DEJANOS TU COMENTARIO</label>
+                        <label class="comentarioDisplay text-wrap" style="width: 16rem" for="floatingTextarea">DEJANOS TU COMENTARIO (OPCIONAL)</label>
                     </div>
 
                     <div class="enviar contactoDiv">
-                        <input type="submit" value="ENVIAR">
+                        <input type="submit" value="ENVIAR"></input>
                     </div>
                 </fieldset>
             </form>
