--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -10,14 +10,14 @@
     <title>Document</title>
 </head>
 
-<h1>
-    <a href="../index.html" class="tituloXerox">
-        XEROX
-    </a>
-</h1>
-
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid fixed-top">
+        <h1>
+            <a href="../index.html" class="tituloXerox">
+                XEROX
+            </a>
+        </h1>
+
         <nav class="row">
             <ul class="xeroxNav">
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
@@ -105,7 +105,7 @@
                     <div class="form-floating contactoDiv">
                         <input type="date" name="fecha" class="form-control" placeholder="Fecha" required>
                         <label for="floatingTextarea">FECHA DE NACIMIENTO</label>
-                    </div>      
+                    </div>
 
                     <div class="form-floating contactoDiv">
                         <input type="email" name="email" class="form-control" id="floatingInput"
@@ -137,7 +137,8 @@
                     <div class="form-floating contactoDiv">
                         <textarea name="comentario" class="form-control" placeholder="Dejanos tu comentario"
                             id="floatingTextarea2" style="height: 200px"></textarea>
-                        <label class="comentarioDisplay text-wrap" style="width: 16rem" for="floatingTextarea">DEJANOS TU COMENTARIO (OPCIONAL)</label>
+                        <label class="comentarioDisplay text-wrap" style="width: 16rem" for="floatingTextarea">DEJANOS
+                            TU COMENTARIO (OPCIONAL)</label>
                     </div>
 
                     <div class="enviar contactoDiv">
@@ -153,7 +154,6 @@
                 src="../img/icons8-instagram.svg" alt=""></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
                 src="../img/icons8-facebook.svg" alt=""></a>
-        <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
