--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -10,14 +10,14 @@
     <title>Document</title>
 </head>
 
-<h1>
-    <a href="../index.html" class="tituloXerox" id="xerox">
-        XEROX
-    </a>
-</h1>
-
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid fixed-top">
+        <h1>
+            <a href="../index.html" class="tituloXerox" id="xerox">
+                XEROX
+            </a>
+        </h1>
+
         <nav class="row">
             <ul class="xeroxNav">
                 <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
@@ -111,7 +111,6 @@
                 src="../img/icons8-instagram.svg" alt=""></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
                 src="../img/icons8-facebook.svg" alt=""></a>
-        <a href="#xerox" class="footerRedes">Arriba</a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
