--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <img src="./img/14caa8274fc227ae72a0ba394462db2f811e61e6.webp" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" class="d-block w-100" alt="...">
+                        <img src="./img/da18ugq-f031344b-1c87-4586-a4c7-5d71c308a435.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/batman_broma_asesina_deluxe_pvc.jpg" class="d-block w-100" alt="...">
